# pyREMO

./: .gitignore  AGENTS.md  GEMINI.md  README  README.md  pyproject.toml  remo.py
famr_python/: backbone.py  data_structures.py  geometry.py  hydrogen.py  io.py  naming.py  reconstruct.py  sidechain.py  topology.py
pyremo/: __init__.py  api.py  resources.py
